# pygraph

./: ARCHITECTURE.md  README.md  data_loader.py  gui.py  main.py  overlay3d.py  panel.py  plot.py  plot3d.py  plot3d_curve.py  plot3d_parametric.py  plot_hist.py  plot_slot.py  prompt  pyproject.toml  renderer.py  requirements.txt  shaders.py  shaders3d.py  state.py  test_histogram.csv  test_scatter.csv  util.py
.github/workflows/: publish.yml
pygraph/: __init__.py  __main__.py  gui.py  main.py  overlay3d.py  panel.py  plot_slot.py  renderer.py  session.py  shaders.py  state.py  test_sine.csv
