[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pygraph-plotter"
version = "0.2.0"
description = "OpenGL-based interactive math function plotter"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PyOpenGL>=3.1.7",
    "imgui_bundle>=1.5.0",
    "numpy>=1.24",
    "sympy>=1.12",
    "Pillow>=9.0",
]

[project.scripts]
pygraph = "pygraph.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
pygraph = ["*.csv"]
